--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="menu_AddIncome">Add income</string>
     <string name="menu_AddExpense">Add expense</string>
     <string name="logout">Logout</string>
+    <string name="titleIncomeRegisterActivity">Register Income</string>
+    <string name="titleExpenseRegisterActivity">Register Expense</string>
+    <string name="dateTimeFormat">dd/M/yyyy hh:mm:ss</string>
+    <string name="dateFormat">dd/M/yyyy</string>
+    <string name="parameterTypeOperation">typeOperation</string>
 </resources>
