Implemented validation in activity Register Operation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="logout">Logout</string>
     <string name="titleIncomeRegisterActivity">Register Income</string>
     <string name="titleExpenseRegisterActivity">Register Expense</string>
-    <string name="dateTimeFormat">dd/M/yyyy hh:mm:ss</string>
+    <string name="dateTimeFormat">dd/MM/yyyy hh:mm:ss</string>
     <string name="dateFormat">dd/MM/yyyy</string>
     <string name="parameterTypeOperation">typeOperation</string>
 </resources>
